spring boot inventory

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.ijiangtao.tech.alogging</groupId>
+	<groupId>net.ijiangtao.tech.alogging</groupId>
 	<artifactId>aloggerdemo</artifactId>
 	<version>1.1.01.01-SNAPSHOT</version>
 
@@ -30,7 +30,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.ijiangtao.tech.alogging</groupId>
+			<groupId>net.ijiangtao.tech.alogging</groupId>
 			<artifactId>alogger</artifactId>
 			<version>1.1.01.01-SNAPSHOT</version>
 		</dependency>
